<resources>
    <string name="app_name" translatable="false">DicoStory</string>
    <string name="hint_add_story">Add your story</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="switch_camera">Switch camera</string>
    <string name="take_picture">Take picture</string>
    <string name="add_story">Add Story</string>
    <string name="image_decoration">Image decoration</string>
    <string name="hint_email">Insert your email</string>
    <string name="hint_password">Insert your password</string>
    <string name="login">Login</string>
    <string name="register_here">Register here</string>
    <string name="hint_name">Insert your name</string>
    <string name="register">Register</string>
    <string name="login_here">Login here</string>
    <string name="picture_from">Picture from %1$s</string>
    <string name="error">Error</string>
    <string name="success">Success</string>
    <string name="picture_empty">Picture can\'t be empty</string>
    <string name="permission_required">This permission is required</string>
    <string name="upload_success">Upload success!</string>
    <string name="choose_picture">Choose a picture</string>
    <string name="camera_failed">Failed to launch camera!</string>
    <string name="take_picture_failed">Failed to take a picture!</string>
    <string name="required">Required</string>
    <string name="home">Home</string>
    <string name="invalid_email">Invalid email!</string>
    <string name="invalid_password">Password minimum 8 character!</string>
    <string name="change_languange">Change languange</string>
    <string name="logout">Logout</string>
    <string name="result_empty">Result empty!</string>
    <string name="retry">Retry</string>
    <string name="maps" translatable="false">Maps</string>
    <string name="style_maps_error">Style parsing failed!</string>
    <string name="location">Location</string>
    <string name="permissions_success">All permissions granted successfully</string>
    <string name="stories_maps">Stories Maps</string>
    <string name="image_preview">Image preview</string>
</resources>